--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -36,7 +36,7 @@
                                 <a class="nav-link" routerLink="home" routerLinkActive="active-link" >Home</a>
                             </li>
                              <li class="nav-item">
-                                <a class="nav-link" routerLink="seller-account" routerLinkActive="active-link" >Woman</a>
+                                <a class="nav-link" routerLink="#" routerLinkActive="active-link" >Woman</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="#" routerLinkActive="active-link" >Men</a>
